src/objects/Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>App_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/SurveyApp?code=&apos; + Code__c, &apos;Survey&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Date_Time__c</fullName>
        <label>Complete Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_App_Link__c</fullName>
        <formula>&apos;http://&apos; + $Setup.Base_Configuration__c.Site_Address__c + &apos;/SurveyApp?&amp;code=&apos; + Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External App Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_QR_Code__c</fullName>
        <formula>IMAGE(&apos;http://api.qrserver.com/v1/create-qr-code/?data=http%3A%2F%2F&apos; +  $Setup.Base_Configuration__c.Site_Address__c + &apos;%2FSurveyApp%3Fcode%3D&apos; + Code__c, &apos;QR Code&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Complete_Date_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Incomplete</fullName>
        <columns>Complete__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Incomplete</label>
    </listViews>
    <nameField>
        <label>Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>